--- a/style.scss
+++ b/style.scss
@@ -8,32 +8,23 @@
 
 .navigation {
 
-    .logo{
+    .pasek{
         width: 100%;
-        height: 10vh;
+        height: 13vh;
         background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(117,6,6,1) 36%, rgba(184,0,0,1) 100%);
 
     }
-
-    .imgdiv{
-        position: absolute;
-        right: 0.5%;
-        top: 0.5%;
-        background: transparent;
-        margin: 5px;
-
-        img{
-            background: transparent;
-            width: 370px;
-        } 
+   
+    
+    img{
+        width: 48vh;
     }
-
+    
     .social{
         position: absolute;
-        display: flex;
-        bottom: 91.5%;
-        background: transparent;
+        bottom: 89%;
     }
+    
 
     a.menu{ /* Menu wyboru */
 
@@ -57,6 +48,7 @@
         background-color: rgba(151, 1, 1, 0.753);
     }
 
+
 }
 
 
@@ -68,7 +60,7 @@
     border-radius: 50%;
     text-align: center;
     text-decoration: none;
-    margin: 5px 10px;
+    margin: 5px;
 
 }
     
@@ -94,6 +86,11 @@
 .fa-youtube {
     background: rgba(184, 0, 0, 0.827);
     color: white;
+}
+
+#background-filtrs{
+    background-color: rgb(246, 246, 246);
+    box-shadow: 0px 0px 31px -19px rgba(66, 68, 90, 1);
 }
 
 
