--- a/style.scss
+++ b/style.scss
@@ -10,19 +10,48 @@
 
     .pasek{
         width: 100%;
-        height: 13vh;
+        height: 12vh;
         background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(117,6,6,1) 36%, rgba(184,0,0,1) 100%);
 
     }
    
+    @media (max-width: 800px){
+        img{
+            width: 0vh;
+        }
+
+        .logowanie{
+            position: absolute;
+            left: 75%;
+            bottom: 92%;
+        }
+    }
     
-    img{
-        width: 48vh;
+    @media (min-width: 800.2px){
+        img{
+            width: 45vh;
+        }
+
+        .logowanie{
+            position: absolute;
+            left: 90%;
+            bottom: 92%;
+        }
+    }
+    @media (min-width: 1000px){
+        .logowanie{
+            left: 92%;
+        }
     }
     
     .social{
         position: absolute;
         bottom: 89%;
+    }
+
+    .log_in{
+       
+        color: black;
     }
     
 
@@ -54,9 +83,9 @@
 
 .fa {
     position: relative;
-    padding: 20px;
-    font-size: 50px;
-    width: 55px;
+    padding: 10px;
+    font-size: 20px;
+    width: 40px;
     border-radius: 50%;
     text-align: center;
     text-decoration: none;
